# tetra-engine

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
editor/: CMakeLists.txt
editor/include/editor/runtime/: editor_instance.h
editor/src/: editor.cpp  editor.h  main.cpp
editor/src/project_manager/: project_manager.cpp  project_manager.h
editor/src/runtime/: editor_instance.cpp  editor_instance.h
engine/: CMakeLists.txt
engine/include/: core.h  window.h
engine/include/engine/: core.h  engine.h
engine/include/engine/asset/: asset_base.h  asset_manager.h  asset_meta.h  asset_type_registry.h
engine/include/engine/base/: engine_object.h  event.h  runtime_object_base.h  singleton.h
engine/include/engine/component/: camera_component.h  component.h  component_id.h  component_manager.h  component_manager.inl  component_registry.h  transform_component.h
engine/include/engine/component/3d/: camera_3d.h  transform_3d.h
engine/include/engine/data/: guid.h
engine/include/engine/debug/logging/: console_sink.h  file_sink.h  logger.h
engine/include/engine/entity/: entity.h  entity.inl  entity_id.h  entity_manager.h
engine/include/engine/graphics/: render_manager.h  viewport.h
engine/include/engine/math/: constants.h  math_utils.h  matrix4.h  quaternion.h  vector2.h  vector3.h
engine/include/engine/platform/: window.h
engine/include/engine/project_management/: project_manager.h  project_settings.h
engine/include/engine/runtime/: engine_instance.h
engine/include/engine/serialization/: serialization_context.h  serialization_context.inl  serializer.h
engine/include/engine/serialization/json/: json_document.h  json_serialization_context.h  json_value.h
engine/include/engine/stage/: stage.h  stage_asset.h  stage_manager.h
engine/include/platform/: window_instance.h  window_manager.h
engine/src/: core.cpp  core.h  engine.h
engine/src/asset/: asset_base.h  asset_manager.cpp  asset_manager.h  asset_meta.cpp  asset_meta.h
engine/src/base/: engine_object.cpp  engine_object.h  event.h  event_base.h  singleton.h
engine/src/component/: camera_component.cpp  camera_component.h  component.h  component_id.cpp  component_id.h  component_manager.cpp  component_manager.h  component_manager.inl  component_registry.cpp  component_registry.h  transform_component.cpp  transform_component.h
engine/src/component/3d/: camera_3d.cpp  transform_3d.cpp
engine/src/debug/logging/: console_sink.h  logger.h
engine/src/entity/: entity.cpp  entity.h  entity_id.cpp  entity_id.h  entity_manager.cpp  entity_manager.h
engine/src/exceptions/: json_key_not_found_exception.h  json_parse_exception.h  json_type_mismatch_exception.h
engine/src/graphics/: render_manager.cpp  render_manager.h  viewport.cpp
engine/src/graphics/opengl/: opengl_context.cpp  opengl_context.h
engine/src/math/: matrix4.cpp  quaternion.cpp  vector2.cpp  vector3.cpp
engine/src/platform/: window.cpp  window.h
engine/src/platorm/: window_instance.cpp  window_manager.cpp
engine/src/project_management/: project_manager.cpp  project_manager.h
engine/src/runtime/: engine_instance.cpp  engine_instance.h
engine/src/serialization/: serializable.h  serialization_context.h  serialization_context.inl  serializer.h
engine/src/serialization/json/: json_document.cpp  json_document.h  json_serialization_context.cpp  json_serialization_context.h  json_utils.cpp  json_utils.h  json_value.cpp  json_value.h
engine/src/stage/: stage.cpp  stage.h  stage_asset.h  stage_manager.cpp  stage_manager.h
engine/src/utils/: component_utils.h  guid.h  io.cpp  io.h
engine/src/viewport/: viewport.cpp  viewport.h
platform/windows/: editor.rc
tests/: CMakeLists.txt
tests/engine/: json_serialization_context_tests.cpp  json_utils_tests.cpp
tests/engine/math/: matrix4_tests.cpp  quaternion_tests.cpp  vector2_tests.cpp  vector3_tests.cpp
